Fix z-index of bottom banner

--- a/assets/scss/theme/_bottom_banner.scss
+++ b/assets/scss/theme/_bottom_banner.scss
@@ -7,6 +7,7 @@
     height: auto;
     position:fixed;
     bottom:0;
+    z-index: 2;
   }
   @extend .z-depth-2;
 
